vlib/v/checker/tests/enum_cast.out
vlib/v/checker/tests/enum_cast.vv:9:13: error: 12 does not represent a value of enum Color
    7 |     println(Color(0))
    8 |     println(Color(10))
    9 |     println(Color(12))
      |             ~~~~~~~~~
   10 |
   11 |     println(Permissions(0b101))
vlib/v/checker/tests/enum_cast.vv:12:13: error: 10 does not represent a value of enum Permissions
   10 |
   11 |     println(Permissions(0b101))
   12 |     println(Permissions(0b1010))
      |             ~~~~~~~~~~~~~~~~~~~
   13 | }
